# BasicCPPDemo

./: .gitignore  CMakeLists.txt  main.cpp
Animal/: Animal.h
Animal/Cat/: Cat.cpp  Cat.h
Animal/Dog/: Dog.cpp  Dog.h
Animal/Horse/: Horse.cpp  Horse.h
Helpers/Examples/: Examples.cpp  Examples.h
Helpers/Util/: Util.cpp  Util.h
